# lionfuncs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
api_references/: ref_as_readable_json.ipynb  ref_choose_most_similar.ipynb  ref_extract_code_block.ipynb  ref_extract_docstring.ipynb  ref_extract_json_schema.ipynb  ref_flatten.ipynb  ref_function_to_schema.ipynb  ref_lcall.ipynb  ref_nfilter.ipynb  ref_nget.ipynb  ref_ninsert.ipynb  ref_npop.ipynb  ref_nset.ipynb  ref_to_dict.ipynb  ref_to_list.ipynb  ref_to_num.ipynb  ref_utils.ipynb
docs/: async_utils.md  cache_utils.md  config_utils.md  data_utils.md  io_utils.md  log_utils.md  path_utils.md  type_utils.md  validate_utils.md
lionfuncs/: __init__.py  ln_undefined.py  note.py  package_.py  utils.py
lionfuncs/algo/: __init__.py  cosine_similarity.py  hamming_similarity.py  levenshtein_distance.py  string_similarity.py
lionfuncs/algorithms/: jaro_distance.py  levenshtein_distance.py
lionfuncs/data/: __init__.py  flatten.py  nested.py  nget.py  ninsert.py  nmerge.py  npop.py  nset.py  to_dict.py  to_str.py  utils.py
lionfuncs/data_handlers/: flatten.py  nfilter.py  nget.py  ninsert.py  nmerge.py  npop.py  nset.py  to_dict.py  to_list.py  to_num.py  to_str.py  unflatten.py  utils.py
lionfuncs/file/: __init__.py  chunk_.py  chunk_by_chars.py  chunk_by_tokens.py  chunk_content.py  clear_path.py  copy_file.py  dir_to_files.py  file_.py  file_to_chunks.py  is_valid_path.py  list_files.py  path_.py  read_file.py  save_to_file.py  split_path.py
(+147 files in other folders)
