[tool.poetry]
name = "lionfuncs"
version = "1.0.8"
description = ""
authors = ["OceanLi <122793010+ohdearquant@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = ">=2.0.0"
pandas = ">=1.2.0"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = {extras = ["jupyter"], version = "^24.8.0"}
flake8 = "^7.1.1"
isort = "^5.13.2"
pytest-asyncio = "^0.24.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79
